Implementa seção de Parcerias Estratégicas com a logo da WVJ Arquitetura.

--- a/index.html
+++ b/index.html
@@ -245,6 +245,74 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </section>
 
+    <!-- Parcerias Section -->
+    <section id="parcerias" class="parcerias">
+        <div class="container">
+            <h2 class="section-title">Parceria Estratégica</h2>
+            <p class="section-subtitle">Trabalhamos em conjunto com escritórios de arquitetura renomados para garantir a excelência em cada detalhe do seu projeto.</p>
+            
+            <div class="parceria-card">
+                <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663176993275/FDTYSnwJvwUELKma.webp" alt="Logo WVJ Arquitetura" class="parceria-logo">
+                <p class="parceria-nome">WVJ Arquitetura</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <section id="projetos" class="projetos">
+        <div class="container">
+            <h2 class="section-title">Nossos Projetos</h2>
+            <p class="section-subtitle">Conheça alguns dos projetos que refletem nossa excelência e compromisso com a qualidade.</p>
+            
+            <div class="carousel-container">
+                <div class="projetos-carousel">
+                <div class="projeto-card">
+                    <div class="projeto-image placeholder-image">
+                        <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/IdqwQyhiXhDNITMs.jpg" alt="Residência de Luxo">
+                    </div>
+                    <div class="projeto-info">
+                        <h3>Residência de Alto Padrão</h3>
+                        <p>Projeto completo de engenharia estrutural e instalações para residência de luxo.</p>
+                    </div>
+                </div>
+
+                <div class="projeto-card">
+                    <div class="projeto-image placeholder-image">
+                        <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/UzOyVfPXokpnMvhe.jpg" alt="Edifício Comercial">
+                    </div>
+                    <div class="projeto-info">
+                        <h3>Edifício Comercial</h3>
+                        <p>Administração de obra e instalações elétricas para edifício comercial de 15 andares.</p>
+                    </div>
+                </div>
+
+                <div class="projeto-card">
+                    <div class="projeto-image placeholder-image">
+                        <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/XFWLsQrrunLvxcqm.jpg" alt="Infraestrutura Pública">
+                    </div>
+                    <div class="projeto-info">
+                        <h3>Infraestrutura Pública</h3>
+                        <p>Projeto de iluminação e sinalização para vias públicas em parceria com a prefeitura.</p>
+                    </div>
+                </div>
+
+                <div class="projeto-card">
+                    <div class="projeto-image placeholder-image">
+                        <img src="https://files.manuscdn.com/user_upload_by_module/session_file/310519663107922306/CsqNVBxqOoNEiahi.jpg" alt="Indústria">
+                    </div>
+                    <div class="projeto-info">
+                        <h3>Indústria</h3>
+                        <p>Instalação de máquinas e equipamentos industriais com sistemas de prevenção contra incêndio.</p>
+                    </div>
+                </div>
+                </div>
+                <button class="carousel-button prev">&lt;</button>
+                <button class="carousel-button next">&gt;</button>
+                <div class="carousel-dots"></div>
+            </div>
+        </div>
+    </section>
+
 
 
     <!-- Footer -->
