Atualiza SEO e novo design da página de contato

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="REFLETE ENGENHARIA - Serviços de engenharia de alto padrão para clientes residenciais, empresas, consultorias e licitações.">
-    <title>REFLETE ENGENHARIA - Excelência em Engenharia</title>
+    <meta name="description" content="Especialistas em Engenharia Consultiva, Retrofit de Fachadas, HVAC e Construção Modular. Precisão mecânica aplicada à construção civil. Atendemos Niterói, RJ e Região Serrana.">
+    <meta name="keywords" content="Engenharia Civil Niterói, Laudo LTCAT, Retrofit, Construção Modular, Thiago Lemos Simões, Reflete Engenharia, Obras Comerciais, Instalações HVAC">
+    <meta name="author" content="Reflete Engenharia LTDA">
+    <title>Reflete Engenharia | Laudos, Obras e Construção Modular em Niterói e RJ</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
